--- a/index.html
+++ b/index.html
@@ -145,11 +145,14 @@
     </section>
     <section class="fourth-section">
       <h2 class="fourth-section-body body-section-style">А можно в картинках?</h2>
-      <img class="fourth-section-img" src="./images/sunset.png" loading="lazy" alt="Закат с чайками">
-        <img class="fourth-section-img" src="./images/ice-cream.png" loading="lazy" alt="Котомороженое с шапочками">
-        <img class="fourth-section-img" src="./images/tape.png" loading="lazy" alt="Хипстерская кассета">
-        <img class="fourth-section-img" src="./images/books.png" loading="lazy" alt="Библиотека Ленина">
-        <img class="fourth-section-img" src="./images/street.png" loading="lazy" alt="Японская улица">
+      <div class="img-block">
+        <img class="sunset-img" src="./images/sunset.png" loading="lazy" alt="Закат с чайками">
+        <img class="ice-cream-img" src="./images/ice-cream.png" loading="lazy" alt="Котомороженое с шапочками">
+        <img class="hipster-casset-img" src="./images/tape.png" loading="lazy" alt="Хипстерская кассета">
+        <img class="books-img" src="./images/books.png" loading="lazy" alt="Библиотека Ленина">
+        <img class="street-img" src="./images/street.png" loading="lazy" alt="Японская улица">
+      </div>
+      
     </section>
   </main>
 </html>
