--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="./styles/light.css" media="(prefers-color-scheme: light)">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/variables.css">
-    <!-- уточнить -->
     <link rel="apple-touch-icon" href="./images/mobile-icon.png"/>
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="./images/favicon.svg" type="image/svg">
@@ -51,7 +50,7 @@
     </header>
     <script src="./scripts/script.js"></script>
   
-  <main>
+  <main class="second-block">
     <section class="first-section">
       <h2 class="first-section-body body-section-style">Почему сосредоточиться так сложно</h2>
       <div class="main-style-first-section">
@@ -161,7 +160,7 @@
       
       </section>
     </main>
-    <footer class="footer-title">
+    <footer class="footer-title decorated-zone">
       <h2 class="footer-subtitle">focus</h2>
     </footer>
   </body>
