--- a/index.html
+++ b/index.html
@@ -139,8 +139,7 @@
           <p class="music-text text-paragraph-style">
             Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень
             сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист
-            в «белым
-            шумом» или нейромузыкой.
+            в «белымшумом» или нейромузыкой.
           </p>
         </article>
 
@@ -152,8 +151,7 @@
             природы повышает концентрацию, в
             то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с
             физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но
-            и простая
-            двадцатиминутная прогулка — тоже отличный вариант.
+            и простая двадцатиминутная прогулка — тоже отличный вариант.
           </p>
         </article>
 
@@ -162,8 +160,7 @@
           <p class="good-eating-text text-paragraph-style">
             Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в
             крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый
-            рис, хлеб
-            из цельнозерновой пшеницы.
+            рис, хлеб из цельнозерновой пшеницы.
           </p>
         </article>
 
@@ -172,8 +169,7 @@
           <p class="read-teaxt text-paragraph-style">
             Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно
             нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто
-            тренирует
-            направленное внимание.
+            тренирует направленное внимание.
           </p>
         </article>
       </div>
