--- a/index.html
+++ b/index.html
@@ -154,13 +154,11 @@
             и простая двадцатиминутная прогулка — тоже отличный вариант.
           </p>
         </article>
-
-        <article class="good-eating-block article-style">
+       <article class="good-eating-block article-style">
           <h4 class="title-fonts-third-section title-fonts">Хорошо ешьте</h4>
           <p class="good-eating-text text-paragraph-style">
             Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в
-            крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый
-            рис, хлеб из цельнозерновой пшеницы.
+            крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
           </p>
         </article>
 
