--- a/index.html
+++ b/index.html
@@ -69,46 +69,41 @@
           <p class="dopamines-text text-paragraph-style">
             С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана
             и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём
-            тут он? Мы
-            часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в
+            тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в
             соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем
-            больше отвлекаешься,
-            тем больше удовольствия получаешь.
+            больше отвлекаешься, тем больше удовольствия получаешь.
           </p>
         </article>
       </div>
     </section>
 
-    <section class="second-section article-style">
+    <section class="second-section">
       <h2 class="second-section-body body-section-style">Что снижает концентрацию внимания?</h2>
       <div class="main-style-second-section">
         <article class="multitasking-block-second article-style">
-          <h3 class="name-paragrph-style title-fonts">Многозадачность</h3>
+          <h3 class="name-paragrph-style title-fonts section-text">Многозадачность</h3>
           <p class="multitasking-text-second text-paragraph-style">
             Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в
             целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать
-            новости
-            вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать,
+            новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать,
             если не давать ей отдохнуть.
           </p>
         </article>
         <article class="eat-block article-style">
-          <h3 class="name-paragrph-style title-fonts">Еда</h3>
+          <h3 class="name-paragrph-style title-fonts section-text">Еда</h3>
           <p class="eat-text text-paragraph-style">
             «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему
             лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на
-            «углеводные качели»: как
-            только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше
+            «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше
             быстрых углеводов.
           </p>
         </article>
         <article class="gadget-block article-style">
-          <h3 class="name-paragrph-style title-fonts">Гаджеты</h3>
+          <h3 class="name-paragrph-style title-fonts section-text">Гаджеты</h3>
           <p class="gadget-text text-paragraph-style">
             Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном —
             ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и
-            просто не
-            может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и
+            просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и
             получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к
             работе.
           </p>
@@ -120,17 +115,15 @@
       <h2 class="third-section-body body-section-style">Как концентрироваться лучше, чем золотая рыбка (то есть дольше
         трёх секунд)</h2>
       <div class="main-style-third-section">
-        <h3 class="third-main-tittle title-fonts">5 простых (на самом деле не очень) советов</h3>
-        <article class="sky-clouds-block">
+        <h3 class="third-main-tittle title-fonts section-text">5 простых (на самом деле не очень) советов</h3>
+        <article class="sky-clouds-block article-style">
           <h4 class="title-fonts-third-section title-fonts">Представьте небо и облака</h4>
           <p class="sky-clouds-text text-paragraph-style">
             Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные
             мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и
-            представить,
-            что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет
+            представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет
             где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не
-            волноваться о
-            потенциальных проблемах из будущего.
+            волноваться о потенциальных проблемах из будущего.
           </p>
         </article>
 
@@ -138,8 +131,7 @@
           <h4 class="title-fonts-third-section title-fonts">Включите музыку</h4>
           <p class="music-text text-paragraph-style">
             Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень
-            сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист
-            в «белымшумом» или нейромузыкой.
+            сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в «белым шумом» или нейромузыкой.
           </p>
         </article>
 
@@ -148,17 +140,16 @@
           <p class="walk-text text-paragraph-style">
             Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a class="text-link"
               href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328">показал</a>, что созерцание
-            природы повышает концентрацию, в
-            то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с
-            физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но
-            и простая двадцатиминутная прогулка — тоже отличный вариант.
+            природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с
+            физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая 
+            двадцатиминутная прогулка — тоже отличный вариант.
           </p>
         </article>
        <article class="good-eating-block article-style">
           <h4 class="title-fonts-third-section title-fonts">Хорошо ешьте</h4>
           <p class="good-eating-text text-paragraph-style">
-            Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в
-            крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
+            Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара 
+            в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
           </p>
         </article>
 
